--- a/google_play_services/google-play-services_lib/pom.xml
+++ b/google_play_services/google-play-services_lib/pom.xml
@@ -7,6 +7,7 @@
     <groupId>android_infra.google-play-services_lib</groupId>
     <artifactId>android_infra.google-play-services_lib</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     
 </project>
