--- a/google_play_services/google-play-services_lib/project.properties
+++ b/google_play_services/google-play-services_lib/project.properties
@@ -7,7 +7,7 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 #
-# To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, entity.home):
+# To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, entityClazz.home):
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
