--- a/gcm-server/pom.xml
+++ b/gcm-server/pom.xml
@@ -9,6 +9,28 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+<dependencies>
+    <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1</version>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>1.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.8.4</version>
+    </dependency>
 
+</dependencies>
     
 </project>
